Try to fix hover state issue on Safari
IOS users can still see the clicked button hover state when
on the next question. Setting active state to original
background colour to see if it fixes.

--- a/assets/media/css/style.css
+++ b/assets/media/css/style.css
@@ -100,6 +100,10 @@ footer a {
     background-color: #83b97d;
 }
 
+.buttons:active {
+    background-color:#334e30; 
+}
+
 /* media queries tablet size and up */
 
 @media only screen and (min-width:820px) {
